--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "@clerk/clerk-sdk-node": "^4.13.9",
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "core-js": "^3.35.1",
     "dotenv": "^16.3.1",
