--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,13 @@
     "@lexical/react": "^0.13.1",
     "@mantine/core": "^7.5.3",
     "@mantine/hooks": "^7.5.3",
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "ace-builds": "^1.32.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.5",
@@ -27,9 +30,12 @@
     "next": "14.1.0",
     "next-themes": "^0.2.1",
     "react": "^18",
+    "react-ace": "^10.1.0",
     "react-code-blocks": "^0.1.6",
     "react-dom": "^18",
     "react-json-editor-ajrm": "^2.5.14",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
