--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "react": "^18",
     "react-ace": "^10.1.0",
     "react-code-blocks": "^0.1.6",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
     "react-json-editor-ajrm": "^2.5.14",
     "react-markdown": "^9.0.1",
