--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,10 +19,12 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "ace-builds": "^1.32.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "convex": "^1.10.0",
     "framer-motion": "^11.0.5",
     "lexical": "^0.13.1",
     "lucide-react": "^0.331.0",
@@ -37,7 +39,9 @@
     "react-json-editor-ajrm": "^2.5.14",
     "react-loader-spinner": "^6.1.6",
     "react-markdown": "^9.0.1",
+    "react-text-to-speech": "^0.9.1",
     "remark-gfm": "^4.0.0",
+    "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
